html markup complete

--- a/responsiveNavbar.html
+++ b/responsiveNavbar.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>wryan | Navbar</title>
-    <link rel="stylesheet" href="./css/responsiveNavbar.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./css/responsiveNavbar.css" />
+  </head>
+  <body>
+    <header>
+      <div class="menu">
+        <div class="bar"></div>
+      </div>
+      <div class="overlay"></div>
+      <nav>
+        <a href="responsiveNavbar.html" class="brand">HB | C</a>
+        <ul>
+          <li class="nav-item">
+            <a href="#" class="nav-link" data-text="Home">Home</a>
+          </li>
+        </ul>
+        <ul>
+          <li class="nav-item">
+            <a href="#" class="nav-link" data-text="About">About</a>
+          </li>
+        </ul>
+        <ul>
+          <li class="nav-item">
+            <a href="#" class="nav-link" data-text="Portfolio">Portfolio</a>
+          </li>
+        </ul>
+        <ul>
+          <li class="nav-item">
+            <a href="#" class="nav-link" data-text="Services">Services</a>
+          </li>
+        </ul>
+        <ul>
+          <li class="nav-item">
+            <a href="#" class="nav-link" data-text="Contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <script src="js/responsiveNavbar.js"></script>
-</body>
+  </body>
 </html>
