--- a/hamburgerMenu.html
+++ b/hamburgerMenu.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>wryan | hamburgerMenu</title>
-    <link rel="stylesheet" href="./css/hamburgerMenu.css">
-</head>
-<body>
-    <div id="menu-bar">
+    <link rel="stylesheet" href="./css/hamburgerMenu.css" />
+  </head>
+  <body>
+    <h1>
+      <div>M</div>
+      <div id="menu-bar">
         <div id="menu" onclick="onClickMenu()">
-            <div id="bar1" class="bar"></div>
-            <div id="bar2" class="bar"></div>
-            <div id="bar3" class="bar"></div>
+          <div id="bar1" class="bar"></div>
+          <div id="bar2" class="bar"></div>
+          <div id="bar3" class="bar"></div>
         </div>
         <ul class="nav" id="nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
-    </div>
+      </div>
+      <div>N U</div>
+    </h1>
     <div class="menu-bg" id="menu-bg"></div>
     <script src="./js/hamburgerMenu.js"></script>
-</body>
+  </body>
 </html>
