so much to change, but that shit looks dope yo

--- a/hamburgerMenu.html
+++ b/hamburgerMenu.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>
-      <div>M</div>
+      <div class="menu-letters">M</div>
       <div id="menu-bar">
         <div id="menu" onclick="onClickMenu()">
           <div id="bar1" class="bar"></div>
@@ -24,7 +24,7 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
-      <div>N U</div>
+      <div class="menu-letters">N U</div>
     </h1>
     <div class="menu-bg" id="menu-bg"></div>
     <script src="./js/hamburgerMenu.js"></script>
