update to hamburger menu

--- a/hbc/index.html
+++ b/hbc/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>wryan | hamburgerMenu</title>
-    <link rel="stylesheet" href="./css/hamburgerMenu.css" />
+    <title>wryan | HB | C</title>
+    <link rel="stylesheet" href="./assets/css/hamburgerMenu.css" />
+    <link rel="stylesheet" href="./assets/css/logIn.css">
   </head>
   <body>
     <div class="menu-box">
@@ -29,6 +30,9 @@
       </h1>
       <div class="menu-bg" id="menu-bg"></div>
     </div>
-    <script src="./js/hamburgerMenu.js"></script>
+    <div class="log-in">
+        <form action=""></form>
+    </div>
+    <script src="/hbc/assets/js/hamburgerMenu.js"></script>
   </body>
 </html>
